# astara-horizon

./: .gitreview  README.md  _80_admin_rug.py  _81_admin_rug_rugrouters.py  _82_admin_rug_rugtenants.py  setup.cfg  setup.py  test-requirements.txt  tox.ini
akanda/rug_openstack_dashboard/dashboards/admin/rugrouters/: forms.py  panel.py  tables.py  urls.py  views.py
akanda/rug_openstack_dashboard/dashboards/admin/rugtenants/: tables.py  urls.py  views.py
akanda_horizon/rug_openstack_dashboard/api/: rug.py
akanda_horizon/rug_openstack_dashboard/dashboards/admin/rugrouters/: forms.py  tables.py  urls.py  views.py
akanda_horizon/rug_openstack_dashboard/dashboards/admin/rugtenants/: tables.py  urls.py  views.py
akanda_rug_horizon.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
astara_horizon/astara_openstack_dashboard/: overrides.py
astara_horizon/astara_openstack_dashboard/api/: astara.py
astara_horizon/astara_openstack_dashboard/dashboards/admin/astararouters/: forms.py  models.py  panel.py  tables.py  urls.py  views.py
astara_horizon/astara_openstack_dashboard/dashboards/admin/astaratenants/: panel.py  tables.py  urls.py  views.py
openstack_dashboard_extensions/: _80_admin_astara.py  _81_admin_astara_routers.py  _81_admin_rug_rugrouters.py  _82_admin_astara_tenants.py  _82_admin_rug_rugtenants.py
rug_openstack_dashboard/api/: rug.py
rug_openstack_dashboard/dashboards/admin/rugrouters/: forms.py  tables.py  tests.py  urls.py  views.py
rug_openstack_dashboard/dashboards/admin/rugrouters/templates/rugrouters/: _poll.html  _rebuild.html  index.html  poll.html  rebuild.html
rug_openstack_dashboard/dashboards/admin/rugtenants/: panel.py  tables.py  tests.py  urls.py  views.py
rug_openstack_dashboard/dashboards/admin/rugtenants/templates/rugtenants/: _rebuild.html  rebuild.html
(+12 files in other folders)
