[metadata]
name = akanda-horizon
version = 2015.1
summary = Akanda plugin for Horizon
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://github.com/stackforge/akanda-horizon
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    akanda

namespace_packages =
    akanda

[global]
setup-hooks =
    pbr.hooks.setup_hook
